@@ -1,8 +1,9 @@
-$Id: ChangeLog,v 1.27 2004/03/28 15:11:51 h_oudejans Exp $
+$Id: ChangeLog,v 1.28 2004/03/28 16:57:24 h_oudejans Exp $
 
 2004-03-28 Herman Oudejans <hn.oudejans@quicknet.nl>
 	* Fixed linux disk/cart/tape combobox problems
 	* Fixed Audio/Video combobox problems
+	* Fixed "no audiomixer when no firmware"
 
 2004-03-27 Herman Oudejans <hn.oudejans@quicknet.nl>
 	* Catapult now sends update enable commands to openmsx
